feat(user): add user-otp logic
