# src/documentation/swagger.json
@@ -58,6 +58,32 @@
             }
         }
     },
+    "/users/v1/send/otp": {
+        "post": {
+            "summary": "Allow user to send OTP to their email",
+            "tags": ["Users"],
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                        "schema": {
+                            "$ref": "#/components/schema/request/user-send-otp"
+                        }
+                    }
+                }
+            },
+            "responses": {
+                "200": {
+                    "description": "Success send otp"
+                },
+                "400": {
+                    "description": "Bad Request error"
+                },
+                "422": {
+                    "description": "Validation error"
+                }
+            }
+        }
+    },
     "tags": [
 
             {
@@ -129,6 +155,15 @@
                         "password": {
                             "type":"string",
                             "description": "User password"
+                        }
+                    }
+                },
+                "user-send-otp": {
+                    "type": "object",
+                    "properties": {
+                        "email": {
+                            "type": "string",
+                            "description": "User email"
                         }
                     }
                 }
