# src/modules/user/repositories/command/command_handler.ts
@@ -1,6 +1,6 @@
 import User from './domain';
 import connection from '../../../../helpers/databases/mysql/connection';
-import { UserRegister } from "./command_model";
+import { UserRegister, UserSendOtp } from "./command_model";
 
 const user = new User(connection.getConnection());
 
@@ -13,6 +13,16 @@ const userRegister = async (payload: UserRegister) => {
     return result;
 }
 
+const userSendOtp = async (payload: UserSendOtp) => {
+    const createData = async () => {
+        return await user.sendOtp(payload);
+    };
+    
+    const result = await createData();
+    return result;
+}
+
 export default {
     userRegister,
+    userSendOtp,
 }
